Changed inex page to show most recent post

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import { type CollectionEntry, getCollection } from 'astro:content';
 import { marked } from 'marked';
 import Button from './Button.astro';
 import siteConfig from '../data/site-config';
