--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,20 +2,45 @@
 import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Button from '../components/Button.astro';
+import FormattedDate from '../components/FormattedDate.astro';
 import Hero from '../components/Hero.astro';
 import PostPreview from '../components/PostPreview.astro';
 import siteConfig from '../data/site-config';
 import { sortItemsByDateDesc } from '../utils/data-utils';
 
 const posts = (await getCollection('blog')).sort(sortItemsByDateDesc);
-const featuredPosts = posts.filter(({ data }) => data.isFeatured);
-
-const projects = (await getCollection('projects')).sort(sortItemsByDateDesc);
-const featuredProjects = projects.filter(({ data }) => data.isFeatured);
+const latestPost = posts[0];
+const featuredPosts = posts.slice(1).filter(({ data }) => data.isFeatured);
 ---
 
 <BaseLayout description={siteConfig.description} image={siteConfig.image}>
-    <Hero />
+    {
+        latestPost && (
+            <section class="w-full flex flex-col gap-8 mb-16 sm:mb-24">
+                <h1 class="text-3xl leading-tight font-serif font-medium sm:text-5xl sm:leading-tight">{latestPost.data.title}</h1>
+                <div class="text-sm">
+                    <FormattedDate date={latestPost.data.publishDate} />
+                    {latestPost.data.updatedDate && (
+                        <>
+                            {' '}
+                            <span>
+                                (Updated on <FormattedDate date={latestPost.data.updatedDate} />)
+                            </span>
+                        </>
+                    )}
+                </div>
+                {latestPost.data.seo?.image?.src && (
+                    <figure>
+                        <img class="w-full" src={latestPost.data.seo.image.src} loading="lazy" decoding="async" alt={latestPost.data.seo.image.alt || ''} />
+                    </figure>
+                )}
+                {latestPost.data.excerpt && <div class="max-w-none prose prose-dante sm:prose-lg">{latestPost.data.excerpt}</div>}
+                <div class="flex flex-wrap gap-4">
+                    <Button href={`/blog/${latestPost.id}/`}>Read Post</Button>
+                </div>
+            </section>
+        )
+    }
     {
         featuredPosts?.length > 0 && (
             <div class="mb-16 sm:mb-24">
