--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -39,5 +39,5 @@ const tags = getAllTags(posts).sort((tagA, tagB) => {
             );
         })
     }
-    <Subscribe class="my-16 sm:my-24" />
+    <!-- <Subscribe class="my-16 sm:my-24" /> -->
 </BaseLayout>
