--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,54 +2,26 @@
 import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Button from '../components/Button.astro';
-import FormattedDate from '../components/FormattedDate.astro';
 import Hero from '../components/Hero.astro';
 import PostPreview from '../components/PostPreview.astro';
 import siteConfig from '../data/site-config';
 import { sortItemsByDateDesc } from '../utils/data-utils';
 
 const posts = (await getCollection('blog')).sort(sortItemsByDateDesc);
-const latestPost = posts[0];
 const featuredPosts = posts.slice(1).filter(({ data }) => data.isFeatured);
 ---
 
 <BaseLayout description={siteConfig.description} image={siteConfig.image}>
-    {
-        latestPost && (
-            <section class="w-full flex flex-col gap-8 mb-16 sm:mb-24">
-                <h1 class="text-3xl leading-tight font-serif font-medium sm:text-5xl sm:leading-tight">{latestPost.data.title}</h1>
-                <div class="text-sm">
-                    <FormattedDate date={latestPost.data.publishDate} />
-                    {latestPost.data.updatedDate && (
-                        <>
-                            {' '}
-                            <span>
-                                (Updated on <FormattedDate date={latestPost.data.updatedDate} />)
-                            </span>
-                        </>
-                    )}
-                </div>
-                {latestPost.data.seo?.image?.src && (
-                    <figure>
-                        <img class="w-full" src={latestPost.data.seo.image.src} loading="lazy" decoding="async" alt={latestPost.data.seo.image.alt || ''} />
-                    </figure>
-                )}
-                {latestPost.data.excerpt && <div class="max-w-none prose prose-dante sm:prose-lg">{latestPost.data.excerpt}</div>}
-                <div class="flex flex-wrap gap-4">
-                    <Button href={`/blog/${latestPost.id}/`}>Read Post</Button>
-                </div>
-            </section>
-        )
-    }
+    <Hero />
     {
         featuredPosts?.length > 0 && (
             <div class="mb-16 sm:mb-24">
-                <h2 class="mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl">Older Posts</h2>
+                <h2 class="mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl">Older posts</h2>
                 {featuredPosts.map((post) => (
                     <PostPreview post={post} class="mb-10 sm:mb-12" headingLevel="h3" />
                 ))}
                 <div class="mt-12 sm:mt-16">
-                    <Button href="/blog">View All Posts</Button>
+                    <Button href="/blog">View all posts</Button>
                 </div>
             </div>
         )
