Deleted example posts and added subscribe elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Button from '../components/Button.astro';
 import Hero from '../components/Hero.astro';
 import PostPreview from '../components/PostPreview.astro';
+import Subscribe from '../components/Subscribe.astro';
 import siteConfig from '../data/site-config';
 import { sortItemsByDateDesc } from '../utils/data-utils';
 
@@ -26,4 +27,5 @@ const featuredPosts = posts.slice(1).filter(({ data }) => data.isFeatured);
             </div>
         )
     }
+    <Subscribe class="my-16 sm:my-24" />
 </BaseLayout>
